--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,13 +41,14 @@ label {
     margin-bottom: 5px;
 }
 
-input {
+input, select {
     width: 100%;
     border: 2px solid #c2c2c2;
     padding: 10px;
     outline: none;
     margin-bottom: 20px;
 }
+
 
 button.btn-form {
     background: #cdca01;
