--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,9 @@ body {
     max-height: 702px;
     width: 100%;
 }
+/* .logo img {
+    height: 205px;
+} */
 
 .box-logo {
     height: 100%;
@@ -51,7 +54,7 @@ input, select {
 
 
 button.btn-form {
-    background: #cdca01;
+    background: #f96f00;
     border: none;
     color: #fff;
     width: 100%;
@@ -80,7 +83,7 @@ a#reset-pas {
 }
 
 a.logo img{
-    width: 155px;
+    width: 70px;
     margin: 10px 0;
 }
 
@@ -94,7 +97,7 @@ ul.nav.navbar-nav.navbar-right {
 }
 
 li.office {
-    background: #cdca01;
+    background: #f96f00;
     height: 40px;
     margin-top: 4px;
 }
@@ -107,7 +110,7 @@ li.office a {
 
 section.banner-example {
     padding-top: 75px;
-    background: #cdca01;
+    background: #f96f00;
 }
 
 .box-banner-example {
@@ -175,7 +178,7 @@ footer p {
 }
 
 button.btn-footer {
-    background: #cdca01;
+    background: #f96f00;
     border: none;
     color: #fff;
     font-weight: bold;
